--- a/app.json
+++ b/app.json
@@ -1,7 +1,6 @@
 {
-  "name": "IndianBot",
-  "description": "Userbot created by a IndianBhai and join https://t.me/IndianArMyGiveaway for any problems or support",
-  "logo": "https://telegra.ph/file/b6cd017959adc2814db5f.jpg",
+  "name": "ReaperBot",
+  "description": "JA BE GENDU",
     "keywords": [
     "telegram",
     "userbot",
@@ -9,7 +8,7 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/indianbhaiya/IndianBot/",
+  "repository": "https://github.com/udhay018777/reaperbot",
   "website": "#TODO",
   "success_url": "#TODO",
   "env": {
